# critical-css

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
critical_css/: __init__.py  core.py
tests/: test_critical_css.py
